Bug 303673 - Album applet no longer highlighting current track
Summary: Album applet no longer highlighting current track
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Albums (other bugs)
Version First Reported In: 2.5.90 (2.6 beta)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-07-17 10:40 UTC by Mark Fraser
Modified: 2012-08-14 22:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Fraser 2012-07-17 10:40:31 UTC
In versions of Amarok prior to 2.5.90 the album applet used to highlight the current track playing in the current album (bold) and other tracks with the same name, but in a different album or the same artist in a compilation album (italic). In 2.5.90 this no longer happens, all tracks are just shown in the regular font style.

Reproducible: Always

Steps to Reproduce:
1.Add the album applet
2.Play a track
3.See that the track isn't highlighed in that album.
Comment 1 Edward Hades 2012-08-14 22:02:05 UTC
Git commit b22801b9b70725d5e367c5271c7152fa900a2f64 by Edward Hades.
Committed on 14/08/2012 at 23:48.
Pushed by hades into branch 'master'.

albums: don't compare tracks by pointers
Related: bug 288283
FIXED-IN: 2.7

M  +3    -2    src/context/applets/albums/Albums.cpp

http://commits.kde.org/amarok/b22801b9b70725d5e367c5271c7152fa900a2f64