albums: don't compare tracks by pointers

BUG: 303673
CCBUG: 288283
FIXED-IN: 2.7